// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PostInputAttachments - Snapshots > matches snapshot in article mode when submitting 1`] = `
<div>
  <input
    accept="image/gif,image/jpeg,image/png,image/svg+xml,image/webp"
    class="hidden"
    data-testid="file-input"
    type="file"
  />
  <div
    class="h-39 w-full cursor-auto items-center justify-center rounded-md"
    data-testid="card"
  >
    <div
      class="flex flex-col items-center justify-center gap-3"
      data-testid="card-content"
    >
      <div
        class="flex size-16 items-center justify-center rounded-full bg-brand/15"
        data-testid="container"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-image-plus size-8 text-brand"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 5h6"
          />
          <path
            d="M19 2v6"
          />
          <path
            d="M21 11.5V19a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h7.5"
          />
          <path
            d="m21 15-3.086-3.086a2 2 0 0 0-2.828 0L6 21"
          />
          <circle
            cx="9"
            cy="9"
            r="2"
          />
        </svg>
      </div>
      <button
        data-size="sm"
        data-testid="button"
        data-variant="secondary"
        disabled=""
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-plus size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
          <path
            d="M12 5v14"
          />
        </svg>
         Add image
      </button>
    </div>
  </div>
</div>
`;

exports[`PostInputAttachments - Snapshots > matches snapshot in article mode with image attachment 1`] = `
<div>
  <input
    accept="image/gif,image/jpeg,image/png,image/svg+xml,image/webp"
    class="hidden"
    data-testid="file-input"
    type="file"
  />
  <div
    class="gap-4"
    data-testid="container"
  >
    <div
      class="relative"
      data-testid="container"
    >
      <button
        class="absolute right-4 z-10 disabled:pointer-events-auto disabled:cursor-not-allowed disabled:opacity-100 top-4 size-12"
        data-size="icon"
        data-testid="button"
        data-variant="dark"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-trash2 lucide-trash-2 size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 11v6"
          />
          <path
            d="M14 11v6"
          />
          <path
            d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
          />
          <path
            d="M3 6h18"
          />
          <path
            d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
          />
        </svg>
      </button>
      <img
        alt="Image preview"
        class="h-48 w-full cursor-auto rounded-md bg-black object-contain"
        data-testid="image"
        src="blob:mock-url-article-image.jpg"
      />
    </div>
  </div>
</div>
`;

exports[`PostInputAttachments - Snapshots > matches snapshot in article mode with no attachments (placeholder) 1`] = `
<div>
  <input
    accept="image/gif,image/jpeg,image/png,image/svg+xml,image/webp"
    class="hidden"
    data-testid="file-input"
    type="file"
  />
  <div
    class="h-39 w-full cursor-auto items-center justify-center rounded-md"
    data-testid="card"
  >
    <div
      class="flex flex-col items-center justify-center gap-3"
      data-testid="card-content"
    >
      <div
        class="flex size-16 items-center justify-center rounded-full bg-brand/15"
        data-testid="container"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-image-plus size-8 text-brand"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 5h6"
          />
          <path
            d="M19 2v6"
          />
          <path
            d="M21 11.5V19a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h7.5"
          />
          <path
            d="m21 15-3.086-3.086a2 2 0 0 0-2.828 0L6 21"
          />
          <circle
            cx="9"
            cy="9"
            r="2"
          />
        </svg>
      </div>
      <button
        data-size="sm"
        data-testid="button"
        data-variant="secondary"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-plus size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
          <path
            d="M12 5v14"
          />
        </svg>
         Add image
      </button>
    </div>
  </div>
</div>
`;

exports[`PostInputAttachments - Snapshots > matches snapshot when submitting 1`] = `
<div>
  <input
    accept="application/javascript,application/json,application/octet-stream,application/pdf,application/x-www-form-urlencoded,application/xml,application/zip,audio/mpeg,audio/wav,image/gif,image/jpeg,image/png,image/svg+xml,image/webp,multipart/form-data,text/css,text/html,text/plain,text/xml,video/mp4,video/mpeg"
    class="hidden"
    data-testid="file-input"
    multiple=""
    type="file"
  />
  <div
    class="gap-4"
    data-testid="container"
  >
    <div
      class="relative"
      data-testid="container"
    >
      <button
        class="absolute right-4 z-10 disabled:pointer-events-auto disabled:cursor-not-allowed disabled:opacity-100 top-4 size-12"
        data-size="icon"
        data-testid="button"
        data-variant="dark"
        disabled=""
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-trash2 lucide-trash-2 size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 11v6"
          />
          <path
            d="M14 11v6"
          />
          <path
            d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
          />
          <path
            d="M3 6h18"
          />
          <path
            d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
          />
        </svg>
      </button>
      <img
        alt="Image preview"
        class="h-48 w-full cursor-auto rounded-md bg-black object-contain"
        data-testid="image"
        src="blob:mock-url-photo.jpg"
      />
    </div>
  </div>
</div>
`;

exports[`PostInputAttachments - Snapshots > matches snapshot with existing and new attachments combined (edit mode) 1`] = `
<div>
  <input
    accept="application/javascript,application/json,application/octet-stream,application/pdf,application/x-www-form-urlencoded,application/xml,application/zip,audio/mpeg,audio/wav,image/gif,image/jpeg,image/png,image/svg+xml,image/webp,multipart/form-data,text/css,text/html,text/plain,text/xml,video/mp4,video/mpeg"
    class="hidden"
    data-testid="file-input"
    multiple=""
    type="file"
  />
  <div
    class="gap-4"
    data-testid="container"
  >
    <div
      class="relative"
      data-testid="container"
    >
      <button
        class="absolute right-4 z-10 disabled:pointer-events-auto disabled:cursor-not-allowed disabled:opacity-100 top-4 size-12"
        data-size="icon"
        data-testid="button"
        data-variant="dark"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-trash2 lucide-trash-2 size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 11v6"
          />
          <path
            d="M14 11v6"
          />
          <path
            d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
          />
          <path
            d="M3 6h18"
          />
          <path
            d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
          />
        </svg>
      </button>
      <img
        alt="Image preview"
        class="h-48 w-full cursor-auto rounded-md bg-black object-contain"
        data-testid="image"
        src="https://cdn.example.com/main/file-1"
      />
    </div>
    <div
      class="relative"
      data-testid="container"
    >
      <button
        class="absolute right-4 z-10 disabled:pointer-events-auto disabled:cursor-not-allowed disabled:opacity-100 top-4 size-12"
        data-size="icon"
        data-testid="button"
        data-variant="dark"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-trash2 lucide-trash-2 size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 11v6"
          />
          <path
            d="M14 11v6"
          />
          <path
            d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
          />
          <path
            d="M3 6h18"
          />
          <path
            d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
          />
        </svg>
      </button>
      <img
        alt="Image preview"
        class="h-48 w-full cursor-auto rounded-md bg-black object-contain"
        data-testid="image"
        src="blob:mock-url-new-photo.jpg"
      />
    </div>
  </div>
</div>
`;

exports[`PostInputAttachments - Snapshots > matches snapshot with maximum attachments (3) 1`] = `
<div>
  <input
    accept="application/javascript,application/json,application/octet-stream,application/pdf,application/x-www-form-urlencoded,application/xml,application/zip,audio/mpeg,audio/wav,image/gif,image/jpeg,image/png,image/svg+xml,image/webp,multipart/form-data,text/css,text/html,text/plain,text/xml,video/mp4,video/mpeg"
    class="hidden"
    data-testid="file-input"
    multiple=""
    type="file"
  />
  <div
    class="gap-4"
    data-testid="container"
  >
    <div
      class="relative"
      data-testid="container"
    >
      <button
        class="absolute right-4 z-10 disabled:pointer-events-auto disabled:cursor-not-allowed disabled:opacity-100 top-4 size-12"
        data-size="icon"
        data-testid="button"
        data-variant="dark"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-trash2 lucide-trash-2 size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 11v6"
          />
          <path
            d="M14 11v6"
          />
          <path
            d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
          />
          <path
            d="M3 6h18"
          />
          <path
            d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
          />
        </svg>
      </button>
      <img
        alt="Image preview"
        class="h-48 w-full cursor-auto rounded-md bg-black object-contain"
        data-testid="image"
        src="blob:mock-url-image0.jpg"
      />
    </div>
    <div
      class="relative"
      data-testid="container"
    >
      <button
        class="absolute right-4 z-10 disabled:pointer-events-auto disabled:cursor-not-allowed disabled:opacity-100 top-4 size-12"
        data-size="icon"
        data-testid="button"
        data-variant="dark"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-trash2 lucide-trash-2 size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 11v6"
          />
          <path
            d="M14 11v6"
          />
          <path
            d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
          />
          <path
            d="M3 6h18"
          />
          <path
            d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
          />
        </svg>
      </button>
      <img
        alt="Image preview"
        class="h-48 w-full cursor-auto rounded-md bg-black object-contain"
        data-testid="image"
        src="blob:mock-url-image1.jpg"
      />
    </div>
    <div
      class="relative"
      data-testid="container"
    >
      <button
        class="absolute right-4 z-10 disabled:pointer-events-auto disabled:cursor-not-allowed disabled:opacity-100 top-4 size-12"
        data-size="icon"
        data-testid="button"
        data-variant="dark"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-trash2 lucide-trash-2 size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 11v6"
          />
          <path
            d="M14 11v6"
          />
          <path
            d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
          />
          <path
            d="M3 6h18"
          />
          <path
            d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
          />
        </svg>
      </button>
      <img
        alt="Image preview"
        class="h-48 w-full cursor-auto rounded-md bg-black object-contain"
        data-testid="image"
        src="blob:mock-url-image2.jpg"
      />
    </div>
  </div>
</div>
`;

exports[`PostInputAttachments - Snapshots > matches snapshot with mixed attachment types 1`] = `
<div>
  <input
    accept="application/javascript,application/json,application/octet-stream,application/pdf,application/x-www-form-urlencoded,application/xml,application/zip,audio/mpeg,audio/wav,image/gif,image/jpeg,image/png,image/svg+xml,image/webp,multipart/form-data,text/css,text/html,text/plain,text/xml,video/mp4,video/mpeg"
    class="hidden"
    data-testid="file-input"
    multiple=""
    type="file"
  />
  <div
    class="gap-4"
    data-testid="container"
  >
    <div
      class="relative"
      data-testid="container"
    >
      <button
        class="absolute right-4 z-10 disabled:pointer-events-auto disabled:cursor-not-allowed disabled:opacity-100 top-4 size-12"
        data-size="icon"
        data-testid="button"
        data-variant="dark"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-trash2 lucide-trash-2 size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 11v6"
          />
          <path
            d="M14 11v6"
          />
          <path
            d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
          />
          <path
            d="M3 6h18"
          />
          <path
            d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
          />
        </svg>
      </button>
      <img
        alt="Image preview"
        class="h-48 w-full cursor-auto rounded-md bg-black object-contain"
        data-testid="image"
        src="blob:mock-url-photo.jpg"
      />
    </div>
    <div
      class="relative"
      data-testid="container"
    >
      <button
        class="absolute right-4 z-10 disabled:pointer-events-auto disabled:cursor-not-allowed disabled:opacity-100 top-4 size-12"
        data-size="icon"
        data-testid="button"
        data-variant="dark"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-trash2 lucide-trash-2 size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 11v6"
          />
          <path
            d="M14 11v6"
          />
          <path
            d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
          />
          <path
            d="M3 6h18"
          />
          <path
            d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
          />
        </svg>
      </button>
      <video
        class="h-48 w-full cursor-auto"
        data-testid="video"
        src="blob:mock-url-video.mp4"
      />
    </div>
    <div
      class="relative"
      data-testid="container"
    >
      <button
        class="absolute right-4 z-10 disabled:pointer-events-auto disabled:cursor-not-allowed disabled:opacity-100 top-1/2 -translate-y-1/2 size-6"
        data-size="icon"
        data-testid="button"
        data-variant="dark"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-trash2 lucide-trash-2 size-3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 11v6"
          />
          <path
            d="M14 11v6"
          />
          <path
            d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
          />
          <path
            d="M3 6h18"
          />
          <path
            d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
          />
        </svg>
      </button>
      <audio
        class="w-full cursor-auto"
        controls=""
        data-testid="audio"
        src="blob:mock-url-audio.mp3"
      />
    </div>
    <div
      class="relative"
      data-testid="container"
    >
      <button
        class="absolute right-4 z-10 disabled:pointer-events-auto disabled:cursor-not-allowed disabled:opacity-100 top-1/2 -translate-y-1/2 size-8"
        data-size="icon"
        data-testid="button"
        data-variant="dark"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-trash2 lucide-trash-2 size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 11v6"
          />
          <path
            d="M14 11v6"
          />
          <path
            d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
          />
          <path
            d="M3 6h18"
          />
          <path
            d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
          />
        </svg>
      </button>
      <div
        class="cursor-auto flex-row items-center gap-x-2 rounded-md bg-muted p-4 pr-14"
        data-testid="container"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-file-text size-6 shrink-0"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
          />
          <path
            d="M14 2v5a1 1 0 0 0 1 1h5"
          />
          <path
            d="M10 9H8"
          />
          <path
            d="M16 13H8"
          />
          <path
            d="M16 17H8"
          />
        </svg>
        <span
          class="font-bold break-all"
          data-size="sm"
          data-testid="typography"
        >
          document.pdf
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`PostInputAttachments - Snapshots > matches snapshot with multiple images 1`] = `
<div>
  <input
    accept="application/javascript,application/json,application/octet-stream,application/pdf,application/x-www-form-urlencoded,application/xml,application/zip,audio/mpeg,audio/wav,image/gif,image/jpeg,image/png,image/svg+xml,image/webp,multipart/form-data,text/css,text/html,text/plain,text/xml,video/mp4,video/mpeg"
    class="hidden"
    data-testid="file-input"
    multiple=""
    type="file"
  />
  <div
    class="gap-4"
    data-testid="container"
  >
    <div
      class="relative"
      data-testid="container"
    >
      <button
        class="absolute right-4 z-10 disabled:pointer-events-auto disabled:cursor-not-allowed disabled:opacity-100 top-4 size-12"
        data-size="icon"
        data-testid="button"
        data-variant="dark"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-trash2 lucide-trash-2 size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 11v6"
          />
          <path
            d="M14 11v6"
          />
          <path
            d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
          />
          <path
            d="M3 6h18"
          />
          <path
            d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
          />
        </svg>
      </button>
      <img
        alt="Image preview"
        class="h-48 w-full cursor-auto rounded-md bg-black object-contain"
        data-testid="image"
        src="blob:mock-url-image1.jpg"
      />
    </div>
    <div
      class="relative"
      data-testid="container"
    >
      <button
        class="absolute right-4 z-10 disabled:pointer-events-auto disabled:cursor-not-allowed disabled:opacity-100 top-4 size-12"
        data-size="icon"
        data-testid="button"
        data-variant="dark"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-trash2 lucide-trash-2 size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 11v6"
          />
          <path
            d="M14 11v6"
          />
          <path
            d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
          />
          <path
            d="M3 6h18"
          />
          <path
            d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
          />
        </svg>
      </button>
      <img
        alt="Image preview"
        class="h-48 w-full cursor-auto rounded-md bg-black object-contain"
        data-testid="image"
        src="blob:mock-url-image2.png"
      />
    </div>
    <div
      class="relative"
      data-testid="container"
    >
      <button
        class="absolute right-4 z-10 disabled:pointer-events-auto disabled:cursor-not-allowed disabled:opacity-100 top-4 size-12"
        data-size="icon"
        data-testid="button"
        data-variant="dark"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-trash2 lucide-trash-2 size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 11v6"
          />
          <path
            d="M14 11v6"
          />
          <path
            d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
          />
          <path
            d="M3 6h18"
          />
          <path
            d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
          />
        </svg>
      </button>
      <img
        alt="Image preview"
        class="h-48 w-full cursor-auto rounded-md bg-black object-contain"
        data-testid="image"
        src="blob:mock-url-image3.gif"
      />
    </div>
  </div>
</div>
`;

exports[`PostInputAttachments - Snapshots > matches snapshot with no attachments 1`] = `
<div>
  <input
    accept="application/javascript,application/json,application/octet-stream,application/pdf,application/x-www-form-urlencoded,application/xml,application/zip,audio/mpeg,audio/wav,image/gif,image/jpeg,image/png,image/svg+xml,image/webp,multipart/form-data,text/css,text/html,text/plain,text/xml,video/mp4,video/mpeg"
    class="hidden"
    data-testid="file-input"
    multiple=""
    type="file"
  />
</div>
`;

exports[`PostInputAttachments - Snapshots > matches snapshot with resolved existing image attachment (edit mode) 1`] = `
<div>
  <input
    accept="application/javascript,application/json,application/octet-stream,application/pdf,application/x-www-form-urlencoded,application/xml,application/zip,audio/mpeg,audio/wav,image/gif,image/jpeg,image/png,image/svg+xml,image/webp,multipart/form-data,text/css,text/html,text/plain,text/xml,video/mp4,video/mpeg"
    class="hidden"
    data-testid="file-input"
    multiple=""
    type="file"
  />
  <div
    class="gap-4"
    data-testid="container"
  >
    <div
      class="relative"
      data-testid="container"
    >
      <button
        class="absolute right-4 z-10 disabled:pointer-events-auto disabled:cursor-not-allowed disabled:opacity-100 top-4 size-12"
        data-size="icon"
        data-testid="button"
        data-variant="dark"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-trash2 lucide-trash-2 size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 11v6"
          />
          <path
            d="M14 11v6"
          />
          <path
            d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
          />
          <path
            d="M3 6h18"
          />
          <path
            d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
          />
        </svg>
      </button>
      <img
        alt="Image preview"
        class="h-48 w-full cursor-auto rounded-md bg-black object-contain"
        data-testid="image"
        src="https://cdn.example.com/main/file-1"
      />
    </div>
  </div>
</div>
`;

exports[`PostInputAttachments - Snapshots > matches snapshot with resolving existing attachment (skeleton) 1`] = `
<div>
  <input
    accept="application/javascript,application/json,application/octet-stream,application/pdf,application/x-www-form-urlencoded,application/xml,application/zip,audio/mpeg,audio/wav,image/gif,image/jpeg,image/png,image/svg+xml,image/webp,multipart/form-data,text/css,text/html,text/plain,text/xml,video/mp4,video/mpeg"
    class="hidden"
    data-testid="file-input"
    multiple=""
    type="file"
  />
  <div
    class="gap-4"
    data-testid="container"
  >
    <div
      class="relative"
      data-testid="container"
    >
      <div
        class="animate-pulse bg-muted h-48 w-full rounded-md"
        data-slot="skeleton"
      />
    </div>
  </div>
</div>
`;

exports[`PostInputAttachments - Snapshots > matches snapshot with single PDF attachment 1`] = `
<div>
  <input
    accept="application/javascript,application/json,application/octet-stream,application/pdf,application/x-www-form-urlencoded,application/xml,application/zip,audio/mpeg,audio/wav,image/gif,image/jpeg,image/png,image/svg+xml,image/webp,multipart/form-data,text/css,text/html,text/plain,text/xml,video/mp4,video/mpeg"
    class="hidden"
    data-testid="file-input"
    multiple=""
    type="file"
  />
  <div
    class="gap-4"
    data-testid="container"
  >
    <div
      class="relative"
      data-testid="container"
    >
      <button
        class="absolute right-4 z-10 disabled:pointer-events-auto disabled:cursor-not-allowed disabled:opacity-100 top-1/2 -translate-y-1/2 size-8"
        data-size="icon"
        data-testid="button"
        data-variant="dark"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-trash2 lucide-trash-2 size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 11v6"
          />
          <path
            d="M14 11v6"
          />
          <path
            d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
          />
          <path
            d="M3 6h18"
          />
          <path
            d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
          />
        </svg>
      </button>
      <div
        class="cursor-auto flex-row items-center gap-x-2 rounded-md bg-muted p-4 pr-14"
        data-testid="container"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-file-text size-6 shrink-0"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
          />
          <path
            d="M14 2v5a1 1 0 0 0 1 1h5"
          />
          <path
            d="M10 9H8"
          />
          <path
            d="M16 13H8"
          />
          <path
            d="M16 17H8"
          />
        </svg>
        <span
          class="font-bold break-all"
          data-size="sm"
          data-testid="typography"
        >
          document.pdf
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`PostInputAttachments - Snapshots > matches snapshot with single audio attachment 1`] = `
<div>
  <input
    accept="application/javascript,application/json,application/octet-stream,application/pdf,application/x-www-form-urlencoded,application/xml,application/zip,audio/mpeg,audio/wav,image/gif,image/jpeg,image/png,image/svg+xml,image/webp,multipart/form-data,text/css,text/html,text/plain,text/xml,video/mp4,video/mpeg"
    class="hidden"
    data-testid="file-input"
    multiple=""
    type="file"
  />
  <div
    class="gap-4"
    data-testid="container"
  >
    <div
      class="relative"
      data-testid="container"
    >
      <button
        class="absolute right-4 z-10 disabled:pointer-events-auto disabled:cursor-not-allowed disabled:opacity-100 top-1/2 -translate-y-1/2 size-6"
        data-size="icon"
        data-testid="button"
        data-variant="dark"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-trash2 lucide-trash-2 size-3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 11v6"
          />
          <path
            d="M14 11v6"
          />
          <path
            d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
          />
          <path
            d="M3 6h18"
          />
          <path
            d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
          />
        </svg>
      </button>
      <audio
        class="w-full cursor-auto"
        controls=""
        data-testid="audio"
        src="blob:mock-url-audio.mp3"
      />
    </div>
  </div>
</div>
`;

exports[`PostInputAttachments - Snapshots > matches snapshot with single image attachment 1`] = `
<div>
  <input
    accept="application/javascript,application/json,application/octet-stream,application/pdf,application/x-www-form-urlencoded,application/xml,application/zip,audio/mpeg,audio/wav,image/gif,image/jpeg,image/png,image/svg+xml,image/webp,multipart/form-data,text/css,text/html,text/plain,text/xml,video/mp4,video/mpeg"
    class="hidden"
    data-testid="file-input"
    multiple=""
    type="file"
  />
  <div
    class="gap-4"
    data-testid="container"
  >
    <div
      class="relative"
      data-testid="container"
    >
      <button
        class="absolute right-4 z-10 disabled:pointer-events-auto disabled:cursor-not-allowed disabled:opacity-100 top-4 size-12"
        data-size="icon"
        data-testid="button"
        data-variant="dark"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-trash2 lucide-trash-2 size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 11v6"
          />
          <path
            d="M14 11v6"
          />
          <path
            d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
          />
          <path
            d="M3 6h18"
          />
          <path
            d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
          />
        </svg>
      </button>
      <img
        alt="Image preview"
        class="h-48 w-full cursor-auto rounded-md bg-black object-contain"
        data-testid="image"
        src="blob:mock-url-photo.jpg"
      />
    </div>
  </div>
</div>
`;

exports[`PostInputAttachments - Snapshots > matches snapshot with single video attachment 1`] = `
<div>
  <input
    accept="application/javascript,application/json,application/octet-stream,application/pdf,application/x-www-form-urlencoded,application/xml,application/zip,audio/mpeg,audio/wav,image/gif,image/jpeg,image/png,image/svg+xml,image/webp,multipart/form-data,text/css,text/html,text/plain,text/xml,video/mp4,video/mpeg"
    class="hidden"
    data-testid="file-input"
    multiple=""
    type="file"
  />
  <div
    class="gap-4"
    data-testid="container"
  >
    <div
      class="relative"
      data-testid="container"
    >
      <button
        class="absolute right-4 z-10 disabled:pointer-events-auto disabled:cursor-not-allowed disabled:opacity-100 top-4 size-12"
        data-size="icon"
        data-testid="button"
        data-variant="dark"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-trash2 lucide-trash-2 size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 11v6"
          />
          <path
            d="M14 11v6"
          />
          <path
            d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
          />
          <path
            d="M3 6h18"
          />
          <path
            d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
          />
        </svg>
      </button>
      <video
        class="h-48 w-full cursor-auto"
        data-testid="video"
        src="blob:mock-url-video.mp4"
      />
    </div>
  </div>
</div>
`;

exports[`PostInputAttachments - Snapshots > matches snapshot with terminally unresolvable existing attachment (generic card) 1`] = `
<div>
  <input
    accept="application/javascript,application/json,application/octet-stream,application/pdf,application/x-www-form-urlencoded,application/xml,application/zip,audio/mpeg,audio/wav,image/gif,image/jpeg,image/png,image/svg+xml,image/webp,multipart/form-data,text/css,text/html,text/plain,text/xml,video/mp4,video/mpeg"
    class="hidden"
    data-testid="file-input"
    multiple=""
    type="file"
  />
  <div
    class="gap-4"
    data-testid="container"
  >
    <div
      class="relative"
      data-testid="container"
    >
      <button
        class="absolute right-4 z-10 disabled:pointer-events-auto disabled:cursor-not-allowed disabled:opacity-100 top-1/2 -translate-y-1/2 size-8"
        data-size="icon"
        data-testid="button"
        data-variant="dark"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-trash2 lucide-trash-2 size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 11v6"
          />
          <path
            d="M14 11v6"
          />
          <path
            d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
          />
          <path
            d="M3 6h18"
          />
          <path
            d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
          />
        </svg>
      </button>
      <div
        class="cursor-auto flex-row items-center gap-x-2 rounded-md bg-muted p-4 pr-14"
        data-testid="container"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-file-text size-6 shrink-0"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
          />
          <path
            d="M14 2v5a1 1 0 0 0 1 1h5"
          />
          <path
            d="M10 9H8"
          />
          <path
            d="M16 13H8"
          />
          <path
            d="M16 17H8"
          />
        </svg>
        <span
          class="font-bold break-all"
          data-size="sm"
          data-testid="typography"
        >
          existing-image.jpg
        </span>
      </div>
    </div>
  </div>
</div>
`;
